--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,16 +4,16 @@ on:
   workflow_call:
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  group: ${{ github.workflow }}-${{ github.repository }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
 jobs:
   save-pr:
-    name: Save PR Number
+    name: Save Pull Request Metadata
     runs-on: ubuntu-latest
 
     steps:
-      - name: Save PR number
+      - name: Build Artifact
         env:
           PR_NUMBER: ${{ github.event.number }}
           PR_SHA: ${{ github.event.pull_request.head.sha }}
@@ -24,39 +24,28 @@ jobs:
           echo $PR_SHA > ./pr/pr_sha
           echo $MERGE_SHA > ./pr/merge_sha
 
-      - name: Upload PR Number
-        uses: actions/upload-artifact@65d862660abb392b8c4a3d1195a2108db131dd05
+      - name: Upload Artifact
+        uses: actions/upload-artifact@50769540e7f4bd5e21e526ee35c689e35e0d6874
         with:
           name: pr_number
           path: pr/
-
-  link-check:
-    name: Link Check
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout EIP Repository
-        uses: actions/checkout@47fbe2df0ad0e27efb67a70beac3555f192b062f
-
-      - name: Link Checker
-        uses: gaurav-nelson/github-action-markdown-link-check@d53a906aa6b22b8979d33bc86170567e619495ec
-        with:
-          config-file: config/mlc_config.json
-          use-quiet-mode: no
-          use-verbose-mode: yes
-          check-modified-files-only: yes
 
   codespell:
     name: CodeSpell
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout EIP Repository
-        uses: actions/checkout@47fbe2df0ad0e27efb67a70beac3555f192b062f
+      - name: Checkout (Build)
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
+        with:
+          repository: eips-wg/build
+          path: build
+
+      - name: Checkout (Content)
+        uses: ./build/.github/actions/checkout-eips
 
       - name: Get Changed Files
         id: changed
-        continue-on-error: true
         run: |
           echo "CHANGED_FILES<<EOF" >> $GITHUB_ENV
           gh pr diff ${{ github.event.number }} --name-only | sed -e 's|$|,|' | xargs -i echo "{}" >> $GITHUB_ENV
@@ -65,30 +54,29 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run CodeSpell
-        uses: codespell-project/actions-codespell@57beb9f38f49d773d641ac555d1565c3b6a59938
-        if: steps.changed.outcome == 'success'
+        uses: codespell-project/actions-codespell@406322ec52dd7b488e48c1c4b82e2a8b3a1bf630
         with:
           check_filenames: true
-          ignore_words_file: config/.codespell-whitelist
+          ignore_words_file: config/codespell-whitelist
           path: ${{ env.CHANGED_FILES }}
-          skip: .git,Gemfile.lock,**/*.png,**/*.gif,**/*.jpg,**/*.svg,.codespell-whitelist,vendor,_site,_config.yml,style.css
+          skip: .git,**/*.png,**/*.gif,**/*.jpg,**/*.svg
 
   eipw-validator:
     name: EIP Validator (eipw)
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout EIP Repository
-        uses: actions/checkout@47fbe2df0ad0e27efb67a70beac3555f192b062f
-
-      - name: Checkout Build Repository
-        uses: actions/checkout@47fbe2df0ad0e27efb67a70beac3555f192b062f
+      - name: Checkout (Build)
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
         with:
           repository: eips-wg/build
           path: build
 
+      - name: Checkout (Content)
+        uses: ./build/.github/actions/checkout-eips
+
       - uses: ethereum/eipw-action@6785fa283773db4819cb0abf17a185a1d9b6eb9f
-        name: Validate (Global)
+        name: Validate
         id: eipw-global
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -96,38 +84,31 @@ jobs:
           options-file: build/config/eipw.toml
           path: content/
 
-      - if: always()
-        uses: ethereum/eipw-action@6785fa283773db4819cb0abf17a185a1d9b6eb9f
-        name: Validate (WG)
-        id: eipw-wg
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          unchecked: 1, 5069, 5757
-          options-file: .wg/eipw.toml
-          path: content/
-
   markdownlint:
     name: Markdown Linter
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout EIP Repository
-        uses: actions/checkout@47fbe2df0ad0e27efb67a70beac3555f192b062f
+      - name: Checkout (Build)
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
+        with:
+          repository: eips-wg/build
+          path: build
+
+      - name: Checkout (Content)
+        uses: ./build/.github/actions/checkout-eips
 
       - name: Get Changed Files
         id: changed
-        continue-on-error: true
         run: |
           echo "CHANGED_FILES<<EOF" >> $GITHUB_ENV
-          gh pr diff ${{ github.event.number }} --name-only | grep -E -x '[^/]+\.md|EIPS/eip-[0-9]+\.md' >> $GITHUB_ENV
+          gh pr diff ${{ github.event.number }} --name-only | grep -E -x '.*\.md' >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Lint
-        uses: DavidAnson/markdownlint-cli2-action@f5cf187ef11bd3a68a127321b794aa252ff23019
-        if: steps.changed.outcome == 'success'
+      - name: Markdown Lint
+        uses: DavidAnson/markdownlint-cli2-action@db43aef879112c3119a410d69f66701e0d530809
         with:
-          command: config
+          config: config/markdownlint.yaml
           globs: |
-            config/.markdownlint.yaml
             ${{ env.CHANGED_FILES }}
