--- a/config/eipw.toml
+++ b/config/eipw.toml
@@ -2,19 +2,171 @@
 kind = "set-default-annotation"
 name = "status"
 value = "Stagnant"
-annotation_type = "warning"
+annotation_level = "warning"
 
 [[modifiers]]
 kind = "set-default-annotation"
 name = "status"
 value = "Withdrawn"
-annotation_type = "warning"
+annotation_level = "warning"
 
-[lints.preamble-file-name]
-kind = "preamble-file-name"
-name = "eip"
+[lints.markdown-re-eip-dash]
+kind = "markdown-regex"
+mode = "excludes"
+pattern = '(?i)eip[\s]*[0-9]+'
+message = "proposals must be referenced with the form `EIP-N` (not `EIPN` or `EIP N`)"
+
+[lints.preamble-date-created]
+kind = "preamble-date"
+name = "created"
+
+[lints.preamble-re-description-eip-dash]
+kind = "preamble-regex"
+name = "description"
+mode = "excludes"
+pattern = '(?i)eip[\s]*[0-9]+'
+message = "proposals must be referenced with the form `EIP-N` (not `EIPN` or `EIP N`)"
+
+[lints.preamble-re-description-colon]
+kind = "preamble-regex"
+name = "description"
+mode = "excludes"
+pattern = ":"
+message = "preamble header `description` should not contain `:`"
+
+[lints.preamble-refs-description]
+kind = "preamble-proposal-ref"
+name = "description"
 prefix = "eip-"
 suffix = ".md"
+
+[lints.preamble-enum-category]
+kind = "preamble-one-of"
+name = "category"
+values = [
+    "Core",
+    "Networking",
+    "Interface",
+]
+
+[lints.preamble-re-description]
+kind = "preamble-regex"
+name = "description"
+mode = "excludes"
+pattern = '(?i)standar\w*\b'
+message = "preamble header `description` should not contain `standard` (or similar words.)"
+
+[lints.preamble-re-title-erc-dash]
+kind = "preamble-regex"
+name = "title"
+mode = "excludes"
+pattern = '(?i)erc[\s]*[0-9]+'
+message = "proposals must be referenced with the form `ERC-N` (not `ERCN` or `ERC N`)"
+
+[lints.preamble-re-description-erc-dash]
+kind = "preamble-regex"
+name = "description"
+mode = "excludes"
+pattern = '(?i)erc[\s]*[0-9]+'
+message = "proposals must be referenced with the form `ERC-N` (not `ERCN` or `ERC N`)"
+
+
+[lints.markdown-refs]
+kind = "markdown-proposal-ref"
+prefix = "eip-"
+suffix = ".md"
+
+[lints.preamble-req-withdrawal-reason]
+kind = "preamble-required-if-eq"
+when = "status"
+equals = "Withdrawn"
+then = "withdrawal-reason"
+
+[lints.preamble-order]
+kind = "preamble-order"
+names = [
+    "eip",
+    "title",
+    "description",
+    "author",
+    "discussions-to",
+    "status",
+    "last-call-deadline",
+    "type",
+    "category",
+    "created",
+    "requires",
+    "withdrawal-reason",
+]
+
+
+[lints.preamble-requires-status]
+prefix = "eip-"
+suffix = ".md"
+kind = "preamble-requires-status"
+requires = "requires"
+status = "status"
+flow = [
+    [
+        "Draft",
+        "Stagnant",
+    ],
+    ["Review"],
+    ["Last Call"],
+    [
+        "Final",
+        "Withdrawn",
+        "Living",
+        "Moved",
+    ],
+]
+
+[lints.markdown-order-section]
+kind = "markdown-section-order"
+sections = [
+    "Abstract",
+    "Motivation",
+    "Specification",
+    "Rationale",
+    "Backwards Compatibility",
+    "Test Cases",
+    "Reference Implementation",
+    "Security Considerations",
+    "Copyright",
+]
+
+[lints.markdown-rel-links]
+kind = "markdown-relative-links"
+exceptions = [
+    '^https://(www\.)?github\.com/ethereum/consensus-specs/(blob|tree)/[a-f0-9]{40}/.+$',
+    '^https://(www\.)?github\.com/ethereum/consensus-specs/commit/[a-f0-9]{40}$',
+    '^https://(www\.)?github\.com/ethereum/execution-specs/(blob|tree)/[a-f0-9]{40}/.+$',
+    '^https://(www\.)?github\.com/ethereum/execution-specs/commit/[a-f0-9]{40}$',
+    '^https://(www\.)?github\.com/ethereum/execution-spec-tests/(blob|tree)/[a-f0-9]{40}/.+$',
+    '^https://(www\.)?github\.com/ethereum/execution-spec-tests/commit/[a-f0-9]{40}$',
+    '^https://(www\.)?github\.com/ethereum/yellowpaper/(blob|tree)/[a-f0-9]{40}/.+$',
+    '^https://(www\.)?github\.com/ethereum/yellowpaper/commit/[a-f0-9]{40}$',
+    '^https://(www\.)?github\.com/ethereum/devp2p/(blob|tree)/[0-9a-f]{40}/.+$',
+    '^https://(www\.)?github\.com/ethereum/devp2p/commit/[0-9a-f]{40}$',
+    '^https://(www\.)?github\.com/ethereum/portal-network-specs/(blob|tree)/[0-9a-f]{40}/.+$',
+    '^https://(www\.)?github\.com/ethereum/portal-network-specs/commit/[0-9a-f]{40}$',
+    '^https://(www\.)?github\.com/bitcoin/bips/(blob|tree)/[0-9a-f]{40}/bip-[0-9]+\.mediawiki$',
+    '^https://(www\.)?github\.com/ChainAgnostic/CAIPs/(blob|tree)/[a-f0-9]{40}/.+$',
+    '^https://(www\.)?github\.com/ChainAgnostic/CAIPs/commit/[0-9a-f]{40}$',
+    '^https://www\.w3\.org/TR/[0-9][0-9][0-9][0-9]/.*$',
+    '^https://[a-z]*\.spec\.whatwg\.org/commit-snapshots/[0-9a-f]{40}/$',
+    '^https://www\.rfc-editor\.org/rfc/.*$',
+]
+
+[lints.preamble-req-category]
+kind = "preamble-required-if-eq"
+when = "type"
+equals = "Standards Track"
+then = "category"
+
+[lints.preamble-eip]
+kind = "preamble-uint"
+name = "eip"
 
 [lints.markdown-json-cite]
 kind = "markdown-json-schema"
@@ -595,9 +747,20 @@ schema = """
 """
 help = "see https://github.com/ethereum/eipw/blob/master/eipw-lint/src/lints/markdown/json_schema/citation.json"
 
-[lints.preamble-eip]
-kind = "preamble-uint"
-name = "eip"
+[lints.preamble-no-dup]
+kind = "preamble-no-duplicates"
+
+[lints.preamble-requires-ref-description]
+kind = "preamble-require-referenced"
+name = "description"
+requires = "requires"
+
+[lints.preamble-re-title]
+kind = "preamble-regex"
+name = "title"
+mode = "excludes"
+pattern = '(?i)standar\w*\b'
+message = "preamble header `title` should not contain `standard` (or similar words.)"
 
 [lints.preamble-re-title-eip-dash]
 kind = "preamble-regex"
@@ -606,32 +769,24 @@ mode = "excludes"
 pattern = '(?i)eip[\s]*[0-9]+'
 message = "proposals must be referenced with the form `EIP-N` (not `EIPN` or `EIP N`)"
 
-[lints.markdown-refs]
-kind = "markdown-proposal-ref"
-prefix = "eip-"
-suffix = ".md"
-
-[lints.preamble-date-created]
+[lints.preamble-date-last-call-deadline]
 kind = "preamble-date"
-name = "created"
+name = "last-call-deadline"
 
-[lints.markdown-order-section]
-kind = "markdown-section-order"
+[lints.markdown-req-section]
+kind = "markdown-section-required"
 sections = [
     "Abstract",
-    "Motivation",
     "Specification",
     "Rationale",
-    "Backwards Compatibility",
-    "Test Cases",
-    "Reference Implementation",
     "Security Considerations",
     "Copyright",
 ]
 
-[lints.preamble-requires-status]
-kind = "preamble-requires-status"
-requires = "requires"
+[lints.markdown-link-status]
+prefix = "eip-"
+suffix = ".md"
+kind = "markdown-link-status"
 status = "status"
 flow = [
     [
@@ -644,72 +799,20 @@ flow = [
     "Final",
     "Withdrawn",
     "Living",
+    "Moved",
 ],
 ]
-prefix = "eip-"
-suffix = ".md"
 
-[lints.preamble-len-title]
-kind = "preamble-length"
+[lints.preamble-re-title-colon]
+kind = "preamble-regex"
 name = "title"
-min = 2
-max = 44
-
-[lints.preamble-re-discussions-to]
-kind = "preamble-regex"
-name = "discussions-to"
-mode = "includes"
-pattern = "^https://ethereum-magicians.org/t/[^/]+/[0-9]+$"
-message = "preamble header `discussions-to` should point to a thread on ethereum-magicians.org"
-
-[lints.preamble-req-withdrawal-reason]
-kind = "preamble-required-if-eq"
-when = "status"
-equals = "Withdrawn"
-then = "withdrawal-reason"
-
-[lints.preamble-re-description-colon]
-kind = "preamble-regex"
-name = "description"
 mode = "excludes"
 pattern = ":"
-message = "preamble header `description` should not contain `:`"
+message = "preamble header `title` should not contain `:`"
 
-[lints.markdown-re-eip-dash]
-kind = "markdown-regex"
-mode = "excludes"
-pattern = '(?i)eip[\s]*[0-9]+'
-message = "proposals must be referenced with the form `EIP-N` (not `EIPN` or `EIP N`)"
-
-[lints.preamble-order]
-kind = "preamble-order"
-names = [
-    "eip",
-    "title",
-    "description",
-    "author",
-    "discussions-to",
-    "status",
-    "last-call-deadline",
-    "type",
-    "category",
-    "created",
-    "requires",
-    "withdrawal-reason",
-]
-
-[lints.preamble-enum-status]
-kind = "preamble-one-of"
-name = "status"
-values = [
-    "Draft",
-    "Review",
-    "Last Call",
-    "Final",
-    "Stagnant",
-    "Withdrawn",
-    "Living",
-]
+[lints.preamble-list-requires]
+kind = "preamble-list"
+name = "requires"
 
 [lints.preamble-len-description]
 kind = "preamble-length"
@@ -717,17 +820,64 @@ name = "description"
 min = 2
 max = 140
 
-[lints.preamble-req-category]
-kind = "preamble-required-if-eq"
-when = "type"
-equals = "Standards Track"
-then = "category"
-
-[lints.preamble-refs-title]
-kind = "preamble-proposal-ref"
+[lints.preamble-requires-ref-title]
+kind = "preamble-require-referenced"
 name = "title"
-prefix = "eip-"
-suffix = ".md"
+requires = "requires"
+
+[lints.markdown-html-comments]
+kind = "markdown-html-comments"
+name = "status"
+warn_for = [
+    "Draft",
+    "Withdrawn",
+]
+
+[lints.preamble-author]
+kind = "preamble-author"
+name = "author"
+
+[lints.preamble-uint-requires]
+kind = "preamble-uint-list"
+name = "requires"
+
+[lints.preamble-len-requires]
+kind = "preamble-length"
+name = "requires"
+min = 1
+
+[lints.markdown-link-first]
+kind = "markdown-link-first"
+pattern = "(?i)(?:eip|erc)-([0-9])+"
+
+[lints.markdown-re-erc-dash]
+kind = "markdown-regex"
+mode = "excludes"
+pattern = '(?i)erc[\s]*[0-9]+'
+message = "proposals must be referenced with the form `ERC-N` (not `ERCN` or `ERC N`)"
+
+[lints.preamble-list-author]
+kind = "preamble-list"
+name = "author"
+
+[lints.preamble-enum-type]
+kind = "preamble-one-of"
+name = "type"
+values = [
+    "Standards Track",
+    "Meta",
+    "Informational",
+]
+
+[lints.preamble-len-title]
+kind = "preamble-length"
+name = "title"
+min = 2
+max = 44
+
+[lints.preamble-discussions-to]
+kind = "preamble-url"
+name = "discussions-to"
 
 [lints.preamble-req]
 kind = "preamble-required"
@@ -742,114 +892,34 @@ names = [
     "created",
 ]
 
-[lints.preamble-refs-description]
+[lints.preamble-re-discussions-to]
+kind = "preamble-regex"
+name = "discussions-to"
+mode = "includes"
+pattern = "^https://ethereum-magicians.org/t/[^/]+/[0-9]+$"
+message = "preamble header `discussions-to` should point to a thread on ethereum-magicians.org"
+
+[lints.preamble-refs-title]
 kind = "preamble-proposal-ref"
-name = "description"
+name = "title"
 prefix = "eip-"
 suffix = ".md"
 
-[lints.markdown-req-section]
-kind = "markdown-section-required"
-sections = [
-    "Abstract",
-    "Specification",
-    "Rationale",
-    "Security Considerations",
-    "Copyright",
-]
-
-[lints.preamble-date-last-call-deadline]
-kind = "preamble-date"
-name = "last-call-deadline"
-
-[lints.preamble-re-title-erc-dash]
-kind = "preamble-regex"
-name = "title"
-mode = "excludes"
-pattern = '(?i)erc[\s]*[0-9]+'
-message = "proposals must be referenced with the form `ERC-N` (not `ERCN` or `ERC N`)"
-
-[lints.preamble-no-dup]
-kind = "preamble-no-duplicates"
-
-[lints.preamble-author]
-kind = "preamble-author"
-name = "author"
-
-[lints.preamble-discussions-to]
-kind = "preamble-url"
-name = "discussions-to"
-
-[lints.preamble-requires-ref-title]
-kind = "preamble-require-referenced"
-name = "title"
-requires = "requires"
-
-[lints.preamble-enum-category]
+[lints.preamble-enum-status]
 kind = "preamble-one-of"
-name = "category"
+name = "status"
 values = [
-    "Core",
-    "Networking",
-    "Interface",
-    "ERC",
+    "Draft",
+    "Review",
+    "Last Call",
+    "Final",
+    "Stagnant",
+    "Withdrawn",
+    "Living",
 ]
 
-[lints.markdown-link-first]
-kind = "markdown-link-first"
-pattern = "(?i)(?:eip|erc)-[0-9]+"
-
-[lints.preamble-re-description-erc-dash]
-kind = "preamble-regex"
-name = "description"
-mode = "excludes"
-pattern = '(?i)erc[\s]*[0-9]+'
-message = "proposals must be referenced with the form `ERC-N` (not `ERCN` or `ERC N`)"
-
-[lints.preamble-re-description-eip-dash]
-kind = "preamble-regex"
-name = "description"
-mode = "excludes"
-pattern = '(?i)eip[\s]*[0-9]+'
-message = "proposals must be referenced with the form `EIP-N` (not `EIPN` or `EIP N`)"
-
-[lints.preamble-re-title-colon]
-kind = "preamble-regex"
-name = "title"
-mode = "excludes"
-pattern = ":"
-message = "preamble header `title` should not contain `:`"
-
-[lints.preamble-requires-ref-description]
-kind = "preamble-require-referenced"
-name = "description"
-requires = "requires"
-
-[lints.preamble-list-requires]
-kind = "preamble-list"
-name = "requires"
-
-[lints.preamble-re-title]
-kind = "preamble-regex"
-name = "title"
-mode = "excludes"
-pattern = '(?i)standar\w*\b'
-message = "preamble header `title` should not contain `standard` (or similar words.)"
-
-[lints.preamble-uint-requires]
-kind = "preamble-uint-list"
-name = "requires"
-
-[lints.preamble-re-description]
-kind = "preamble-regex"
-name = "description"
-mode = "excludes"
-pattern = '(?i)standar\w*\b'
-message = "preamble header `description` should not contain `standard` (or similar words.)"
-
-[lints.preamble-list-author]
-kind = "preamble-list"
-name = "author"
+[lints.preamble-trim]
+kind = "preamble-trim"
 
 [lints.preamble-req-last-call-deadline]
 kind = "preamble-required-if-eq"
@@ -857,67 +927,15 @@ when = "status"
 equals = "Last Call"
 then = "last-call-deadline"
 
-[lints.markdown-html-comments]
-kind = "markdown-html-comments"
-name = "status"
-warn_for = [
-    "Draft",
-    "Withdrawn",
-]
-
-[lints.markdown-re-erc-dash]
-kind = "markdown-regex"
-mode = "excludes"
-pattern = '(?i)erc[\s]*[0-9]+'
-message = "proposals must be referenced with the form `ERC-N` (not `ERCN` or `ERC N`)"
-
-[lints.preamble-trim]
-kind = "preamble-trim"
-
-[lints.markdown-rel-links]
-kind = "markdown-relative-links"
-exceptions = [
-    '^https://(www\.)?github\.com/ethereum/consensus-specs/blob/[a-f0-9]{40}/.+$',
-    '^https://(www\.)?github\.com/ethereum/consensus-specs/commit/[a-f0-9]{40}$',
-    '^https://(www\.)?github\.com/ethereum/devp2p/blob/[0-9a-f]{40}/.+$',
-    '^https://(www\.)?github\.com/ethereum/devp2p/commit/[0-9a-f]{40}$',
-    '^https://(www\.)?github\.com/bitcoin/bips/blob/[0-9a-f]{40}/bip-[0-9]+\.mediawiki$',
-    '^https://www\.w3\.org/TR/[0-9][0-9][0-9][0-9]/.*$',
-    '^https://[a-z]*\.spec\.whatwg\.org/commit-snapshots/[0-9a-f]{40}/$',
-    '^https://www\.rfc-editor\.org/rfc/.*$',
-]
-
-[lints.markdown-link-status]
-kind = "markdown-link-status"
-status = "status"
-flow = [
-    [
-    "Draft",
-    "Stagnant",
-],
-    ["Review"],
-    ["Last Call"],
-    [
-    "Final",
-    "Withdrawn",
-    "Living",
-],
-]
+[lints.preamble-file-name]
+kind = "preamble-file-name"
+name = "eip"
 prefix = "eip-"
 suffix = ".md"
 
-[lints.preamble-enum-type]
-kind = "preamble-one-of"
-name = "type"
-values = [
-    "Standards Track",
-    "Meta",
-    "Informational",
-]
+[lints.markdown-no-backticks]
+kind = "markdown-no-backticks"
+pattern = "(?i)(eip|erc)-[0-9]+"
 
-[lints.preamble-len-requires]
-kind = "preamble-length"
-name = "requires"
-min = 1
-
-
+[lints.markdown-headings-space]
+kind = "markdown-headings-space"
