--- a/.github/actions/checkout-eips/action.yml
+++ b/.github/actions/checkout-eips/action.yml
@@ -22,14 +22,9 @@ runs:
         SCRIPT="$(mktemp)"
         cat <<'EOF' >> "$SCRIPT"
         set -euo pipefail
-        # TODO: Replace subtree-based approach with "git commit-tree" if this
-        #       becomes problematic.
-        git subtree add --prefix="$1" "${{ github.server_url }}/eips-wg/$1.git" master
-        shopt -s dotglob
-        mkdir -p content
-        git rm "$1/content/LICENSE.md" "$1/content/.gitignore"
-        git mv "$1"/content/* content/
-        git rm -rf "$1"
+        git fetch "${{ github.server_url }}/eips-wg/$1.git" "master:$1"
+        git merge -s ours "$1" --no-edit
+        git checkout "$1" -- content/
         git commit --amend --no-edit
         EOF
 
